Wprowadzenie wczytywania nazwy i opisu umiejetnosci z GameBundle.

--- a/resources/GameBundle_en.properties
+++ b/resources/GameBundle_en.properties
@@ -1,9 +1,51 @@
-winner = {0} has won!
-err_regroup = To finish turn set all units on fields belonging to you\!
-err_attack = You cannot attack this field\!
-err_attack2 = Not enough units to conquer this field\!
-err_token=You cannot set this token on this field\!
-err_token2=You have no rights to move this token\!
-err_choose_nation=You have not enough money\!
-err_no_field_owned=You have to conquer at least one field\!
-err_attack3=You cannot begin conquering with this field\!
+winner = {0} has won\!
+error.regroup = To finish turn set all units on fields belonging to you\!
+error.attack.wrong_target = You cannot attack this field\!
+error.attack.not_enough_units = Not enough units to conquer this field\!
+error.token.wrong_target=You cannot set this token on this field\!
+error.token.no_rights=You have no rights to move this token\!
+error.pick_nation.not_enough_money=You have not enough money\!
+error.next_turn.no_fields_conquered=You have to conquer at least one field\!
+error.attack.first_attack.wrong_target=You cannot begin conquering with this field\!
+ability.wealth.name=Wealth
+ability.wealth.desc=On the end of the first turn after choosing Wealth nations you get an additional 7 coins.
+ability.underground.name=Underground
+ability.underground.desc=You can conquer fields with caves with one token less. You still needs at least one token. All regions in your borders on which there are caves are treated for attack reasons as neighbours.
+ability.swampy.name=Swampy
+ability.swampy.desc=On the end of each turn swamp region owned by your nation brings you one additional coin.
+ability.steadfast.name=Steadfast
+ability.steadfast.desc=You can extinct right after you normal turn, after money counting phase, instead of sacrificing for this whole turn.
+ability.spiritualist.name=Spiritualist
+ability.spiritualist.desc=You get two additional coins after end of each turn while your nation remains active.
+ability.sailing.name=Sailing
+ability.sailing.desc=While your sailing nation is active you can conquer lakes and seas, treating them as
+ability.merchant.name=Merchant
+ability.merchant.desc=On the end of each turn every region owned by you gives you one additional coin.
+ability.mad.name=Mad
+ability.mad.desc=You can use conquer dice before every attack. You still need at least one token to attack.
+ability.looting.name=Looting
+ability.looting.desc=On the end of each turn you get one additional coin for every not empty region conquered by you on this turn.
+ability.horseman.name=Horseman
+ability.horseman.desc=You can conquer hills and plains with one token less. You still need at least one token to attack.
+ability.heroic.name=Heroic
+ability.heroic.desc=On the end of each turn place two heroes on two different regions belonging to you. These regions\
+   are immune.
+ability.hilly.name=Hilly
+ability.hilly.desc=On the end of each turn you get additional coin for every hills ruled by your nation..
+ability.fortified.name=Fortified
+ability.fortified.desc=Once a turn place Fortress in region ruled by you. One the end of turn fortress brings you one\
+   additional coin. Fortress gives you one defense point. You remove Fortress when you leave field or it becomes conquered. There can by just one Fortress on field and six on map.
+ability.forestry.name=Forestry
+ability.forestry.desc=On the end of every turn each forest field brings you an additional coin.
+ability.flying.name=Flying
+ability.flying.desc=You can attack every region except of lakes and seas. These don't have to be neighbours.
+ability.alchemical.name=Alchemical
+ability.alchemical.desc=You get two additional coins every turn this nation remains active.
+ability.brave.name=Brave
+ability.brave.desc=You can attack every field with one less token. You still need at least one token.
+ability.camper.name=Camper
+ability.camper.desc=In regroup phase place 5 camps on your owned lands. Camps gives fields additional defense point and protect against sorcerer's ability. Every turn you can change their positions. Camps disappear when your nation extincts.
+ability.diplomatic.name=Diplomatic
+ability.diplomatic.desc=On the end of a turn you can choose one player, which you did not attack this turn, and make peace with him. He can't attack you till the end of your next turn.
+ability.dragon_lords.name=Dragon Lords
+ability.dragon_lords.desc=Once a turn you can conquer neighbour region using just one token, no matter how many tokens defend this one. After that place a dragon on this field. While dragon stays on field this field is immune.
