Wprowadzenie wczytywania nazwy i opisu ras z GameBundle.

--- a/resources/GameBundle_en.properties
+++ b/resources/GameBundle_en.properties
@@ -49,3 +49,31 @@ ability.diplomatic.name=Diplomatic
 ability.diplomatic.desc=On the end of a turn you can choose one player, which you did not attack this turn, and make peace with him. He can't attack you till the end of your next turn.
 ability.dragon_lords.name=Dragon Lords
 ability.dragon_lords.desc=Once a turn you can conquer neighbour region using just one token, no matter how many tokens defend this one. After that place a dragon on this field. While dragon stays on field this field is immune.
+nation.wizards.name=Wizards
+nation.wizards.desc=On the end of a turn you earn additional coin for every region with source of magic.
+nation.trolls.name=Trolls
+nation.trolls.desc=Place a lore in every conquered region. It adds one defense point even when trolls are extinct nation.
+nation.tritons.name=Tritons
+nation.tritons.desc=You need one less token to conquer fields bordering with lakes or seas. You still needs at least one token.
+nation.sorcerers.name=Sorcerers
+nation.sorcerers.desc=Once a turn you can conquer one region belonging to every opponent defended by one token of his active nation using additional sorcerer token.
+nation.skeletons.name=Skeletons
+nation.skeletons.desc=During regroup phase get additional token for every two not empty regions conquered by you in this turn.
+nation.ratmen.name=Ratmen
+nation.ratmen.desc=Their size is big enough bonus.
+nation.orcs.name=Orcs
+nation.orcs.desc=On the end of a turn you get additional coin for every not empty region conquered by you in this turn.
+nation.ghuls.name=Ghuls
+nation.ghuls.desc=Even when ghuls are extinct nation they stays on map. You can use them as your active nation.
+nation.giants.name=Giants
+nation.giants.desc=While conquering regions bordering with mountains you rule, you need one less token. You still need at least one token.
+nation.halflings.name=Halflings
+nation.halflings.desc=You can begin conquering from any region. In first two conquered regions plac burrows, which makes them immune.
+nation.amazons.name=Amazons
+nation.amazons.desc=To conquer you can use four additional units.
+nation.dwarves.name=Dwarves
+nation.dwarves.desc=Every region with mines brings you one additional coin, even after extinction.
+nation.elves.name=Elves
+nation.elves.desc=You do not lose unit after your land is conquered.
+nation.humans.name=Humans
+nation.humans.desc=Every plain ruled by you brings you additional coin.
