--- a/resources/GameBundle_en.properties
+++ b/resources/GameBundle_en.properties
@@ -63,12 +63,13 @@ nation.ratmen.name=Ratmen
 nation.ratmen.desc=Their size is big enough bonus.
 nation.orcs.name=Orcs
 nation.orcs.desc=On the end of a turn you get additional coin for every not empty region conquered by you in this turn.
-nation.ghuls.name=Ghuls
-nation.ghuls.desc=Even when ghuls are extinct nation they stays on map. You can use them as your active nation.
+nation.ghouls.name=Ghouls
+nation.ghouls.desc=Even when ghouls are extinct nation they stays on map. You can use them as your active nation.
 nation.giants.name=Giants
 nation.giants.desc=While conquering regions bordering with mountains you rule, you need one less token. You still need at least one token.
 nation.halflings.name=Halflings
-nation.halflings.desc=You can begin conquering from any region. In first two conquered regions plac burrows, which makes them immune.
+nation.halflings.desc=You can begin conquering from any region. In first two conquered regions place burrows, which \
+  makes them immune.
 nation.amazons.name=Amazons
 nation.amazons.desc=To conquer you can use four additional units.
 nation.dwarves.name=Dwarves
