Dodanie kostki posiłków, centrowanie tooltipow. closes #11

--- a/resources/GameBundle_en.properties
+++ b/resources/GameBundle_en.properties
@@ -79,3 +79,4 @@ nation.elves.desc=You do not lose unit after your land is conquered.
 nation.humans.name=Humans
 nation.humans.desc=Every plain ruled by you brings you additional coin.
 error.token.already_placed=You have already used this token\!
+reinforcements=You get {0} on reinforcements dice\!
