--- a/resources/GameBundle_pl.properties
+++ b/resources/GameBundle_pl.properties
@@ -77,3 +77,4 @@ nation.elves.desc=Zachowujesz wszystkie wycofane oddziały.
 nation.humans.name=Ludzie
 nation.humans.desc=Na koniec tury każdy kontrolowany region Pól przynosi ci dodatkowo 1 monetę zwycięstwa.
 error.token.already_placed=Skorzystałeś już w tego żetonu\!
+reinforcements=Wylosowałeś {0} na kości posiłków\!
