Dzialajace oszalale + poprawione dzialanie kostki posilkow #fixes 14

--- a/resources/GameBundle_en.properties
+++ b/resources/GameBundle_en.properties
@@ -80,3 +80,4 @@ nation.humans.name=Humans
 nation.humans.desc=Every plain ruled by you brings you additional coin.
 error.token.already_placed=You have already used this token\!
 reinforcements=You get {0} on reinforcements dice\!
+error.dice.multiple_usage=You cannot use dice twice to attack same field.
