--- a/resources/GameBundle_pl.properties
+++ b/resources/GameBundle_pl.properties
@@ -78,3 +78,4 @@ nation.humans.name=Ludzie
 nation.humans.desc=Na koniec tury każdy kontrolowany region Pól przynosi ci dodatkowo 1 monetę zwycięstwa.
 error.token.already_placed=Skorzystałeś już w tego żetonu\!
 reinforcements=Wylosowałeś {0} na kości posiłków\!
+error.dice.multiple_usage=Nie można użyć kostki 2 ktornie do ataku tego samego pola.
